--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.draggable {
+  position: absolute;
+  width: 100vw;
+  height: 15vh;
+  color: red;
+  -webkit-app-region: drag
+}
